parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement_list
Rule 2     statement_list -> statement_list statement SEMICOLON
Rule 3     statement_list -> <empty>
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> if_stmnt
Rule 7     statement -> while_stmt
Rule 8     statement -> function_definition
Rule 9     statement -> expression
Rule 10    statement -> compound_types
Rule 11    statement -> compound_type_access
Rule 12    statement -> try_except
Rule 13    statement -> print
Rule 14    declaration -> VAR type ID ASSIGN L
Rule 15    assignment -> ID ASSIGN L
Rule 16    assignment -> compound_type_access ASSIGN L
Rule 17    L -> statement
Rule 18    L -> function_call
Rule 19    L -> container_access
Rule 20    L -> <empty>
Rule 21    function_call -> ID LPAREN data RPAREN
Rule 22    container_access -> LPAREN ID LSPAREN factor RSPAREN RPAREN
Rule 23    type -> INT
Rule 24    type -> BOOL
Rule 25    type -> STR
Rule 26    type -> VOID
Rule 27    compound_types -> A ID ASSIGN LPAREN data RPAREN
Rule 28    A -> TUPLE
Rule 29    A -> LIST
Rule 30    data -> expression hi
Rule 31    data -> <empty>
Rule 32    hi -> COMMA data
Rule 33    hi -> <empty>
Rule 34    compound_type_access -> ID DOT F
Rule 35    compound_type_access -> ID LSPAREN expression RSPAREN
Rule 36    F -> CON LPAREN factor RPAREN
Rule 37    F -> FRONT
Rule 38    F -> ADDD
Rule 39    F -> LPAREN factor RPAREN
Rule 40    F -> REAR
Rule 41    F -> SIZE
Rule 42    F -> DELETE
Rule 43    F -> SUBSTR LPAREN data RPAREN
Rule 44    F -> <empty>
Rule 45    binary_operator -> MINUS
Rule 46    binary_operator -> MUL
Rule 47    binary_operator -> PLUS
Rule 48    binary_operator -> DIV
Rule 49    binary_operator -> REM
Rule 50    unary_operator -> PLUSPLUS
Rule 51    unary_operator -> MINUSMINUS
Rule 52    term -> factor
Rule 53    term -> term unary_operator
Rule 54    if_stmnt -> IF LPAREN condition RPAREN BEGIN statement_list END T K
Rule 55    comparison_operator -> EQEQ
Rule 56    comparison_operator -> NOTEQ
Rule 57    comparison_operator -> LT
Rule 58    comparison_operator -> GT
Rule 59    comparison_operator -> LTEQ
Rule 60    comparison_operator -> GTEQ
Rule 61    T -> ELIF LPAREN condition RPAREN BEGIN statement_list END T
Rule 62    T -> <empty>
Rule 63    K -> ELSE BEGIN statement_list END
Rule 64    K -> <empty>
Rule 65    while_stmt -> WHILE LPAREN condition RPAREN BEGIN statement_list END
Rule 66    function_definition -> type ID LPAREN parameter_list RPAREN BEGIN statement_list RETURN L SEMICOLON END
Rule 67    parameter_list -> type ID optional_parameter_list
Rule 68    parameter_list -> A LSPAREN type RSPAREN ID LSPAREN RSPAREN optional_parameter_list
Rule 69    parameter_list -> <empty>
Rule 70    optional_parameter_list -> COMMA type ID optional_parameter_list
Rule 71    optional_parameter_list -> COMMA A LSPAREN type RSPAREN ID LSPAREN RSPAREN optional_parameter_list
Rule 72    optional_parameter_list -> <empty>
Rule 73    condition -> expression comparison_operator expression
Rule 74    condition -> compound_type_access comparison_operator compound_type_access
Rule 75    expression -> expression binary_operator term
Rule 76    expression -> term
Rule 77    factor -> ID
Rule 78    factor -> NUMBER
Rule 79    factor -> STRING
Rule 80    factor -> TRUE
Rule 81    factor -> FALSE
Rule 82    factor -> LPAREN expression RPAREN
Rule 83    try_except -> BEGIN TRY statement_list EXCEPT statement_list END
Rule 84    print -> ZOUT LPAREN y RPAREN
Rule 85    y -> expression
Rule 86    y -> compound_type_access

Terminals, with rules where they appear

ADDD                 : 38
ASSIGN               : 14 15 16 27
BEGIN                : 54 61 63 65 66 83
BOOL                 : 24
COMMA                : 32 70 71
CON                  : 36
DELETE               : 42
DIV                  : 48
DOT                  : 34
ELIF                 : 61
ELSE                 : 63
END                  : 54 61 63 65 66 83
EQEQ                 : 55
EXCEPT               : 83
FALSE                : 81
FRONT                : 37
GT                   : 58
GTEQ                 : 60
ID                   : 14 15 21 22 27 34 35 66 67 68 70 71 77
IF                   : 54
INT                  : 23
LIST                 : 29
LPAREN               : 21 22 27 36 39 43 54 61 65 66 82 84
LSPAREN              : 22 35 68 68 71 71
LT                   : 57
LTEQ                 : 59
MINUS                : 45
MINUSMINUS           : 51
MUL                  : 46
NOTEQ                : 56
NUMBER               : 78
PLUS                 : 47
PLUSPLUS             : 50
REAR                 : 40
REM                  : 49
RETURN               : 66
RPAREN               : 21 22 27 36 39 43 54 61 65 66 82 84
RSPAREN              : 22 35 68 68 71 71
SEMICOLON            : 2 66
SIZE                 : 41
STR                  : 25
STRING               : 79
SUBSTR               : 43
TRUE                 : 80
TRY                  : 83
TUPLE                : 28
VAR                  : 14
VOID                 : 26
WHILE                : 65
ZOUT                 : 84
error                : 

Nonterminals, with rules where they appear

A                    : 27 68 71
F                    : 34
K                    : 54
L                    : 14 15 16 66
T                    : 54 61
assignment           : 5
binary_operator      : 75
comparison_operator  : 73 74
compound_type_access : 11 16 74 74 86
compound_types       : 10
condition            : 54 61 65
container_access     : 19
data                 : 21 27 32 43
declaration          : 4
expression           : 9 30 35 73 73 75 82 85
factor               : 22 36 39 52
function_call        : 18
function_definition  : 8
hi                   : 30
if_stmnt             : 6
optional_parameter_list : 67 68 70 71
parameter_list       : 66
print                : 13
start                : 0
statement            : 2 17
statement_list       : 1 2 54 61 63 65 66 83 83
term                 : 53 75 76
try_except           : 12
type                 : 14 66 67 68 70 71
unary_operator       : 53
while_stmt           : 7
y                    : 84

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement_list
    (2) statement_list -> . statement_list statement SEMICOLON
    (3) statement_list -> .

    VAR             reduce using rule 3 (statement_list -> .)
    ID              reduce using rule 3 (statement_list -> .)
    IF              reduce using rule 3 (statement_list -> .)
    WHILE           reduce using rule 3 (statement_list -> .)
    BEGIN           reduce using rule 3 (statement_list -> .)
    ZOUT            reduce using rule 3 (statement_list -> .)
    INT             reduce using rule 3 (statement_list -> .)
    BOOL            reduce using rule 3 (statement_list -> .)
    STR             reduce using rule 3 (statement_list -> .)
    VOID            reduce using rule 3 (statement_list -> .)
    TUPLE           reduce using rule 3 (statement_list -> .)
    LIST            reduce using rule 3 (statement_list -> .)
    NUMBER          reduce using rule 3 (statement_list -> .)
    STRING          reduce using rule 3 (statement_list -> .)
    TRUE            reduce using rule 3 (statement_list -> .)
    FALSE           reduce using rule 3 (statement_list -> .)
    LPAREN          reduce using rule 3 (statement_list -> .)
    $end            reduce using rule 3 (statement_list -> .)

    start                          shift and go to state 1
    statement_list                 shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> statement_list .
    (2) statement_list -> statement_list . statement SEMICOLON
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . if_stmnt
    (7) statement -> . while_stmt
    (8) statement -> . function_definition
    (9) statement -> . expression
    (10) statement -> . compound_types
    (11) statement -> . compound_type_access
    (12) statement -> . try_except
    (13) statement -> . print
    (14) declaration -> . VAR type ID ASSIGN L
    (15) assignment -> . ID ASSIGN L
    (16) assignment -> . compound_type_access ASSIGN L
    (54) if_stmnt -> . IF LPAREN condition RPAREN BEGIN statement_list END T K
    (65) while_stmt -> . WHILE LPAREN condition RPAREN BEGIN statement_list END
    (66) function_definition -> . type ID LPAREN parameter_list RPAREN BEGIN statement_list RETURN L SEMICOLON END
    (75) expression -> . expression binary_operator term
    (76) expression -> . term
    (27) compound_types -> . A ID ASSIGN LPAREN data RPAREN
    (34) compound_type_access -> . ID DOT F
    (35) compound_type_access -> . ID LSPAREN expression RSPAREN
    (83) try_except -> . BEGIN TRY statement_list EXCEPT statement_list END
    (84) print -> . ZOUT LPAREN y RPAREN
    (23) type -> . INT
    (24) type -> . BOOL
    (25) type -> . STR
    (26) type -> . VOID
    (52) term -> . factor
    (53) term -> . term unary_operator
    (28) A -> . TUPLE
    (29) A -> . LIST
    (77) factor -> . ID
    (78) factor -> . NUMBER
    (79) factor -> . STRING
    (80) factor -> . TRUE
    (81) factor -> . FALSE
    (82) factor -> . LPAREN expression RPAREN

    $end            reduce using rule 1 (start -> statement_list .)
    VAR             shift and go to state 14
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 20
    BEGIN           shift and go to state 19
    ZOUT            shift and go to state 23
    INT             shift and go to state 24
    BOOL            shift and go to state 25
    STR             shift and go to state 26
    VOID            shift and go to state 27
    TUPLE           shift and go to state 29
    LIST            shift and go to state 30
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    LPAREN          shift and go to state 18

    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmnt                       shift and go to state 6
    while_stmt                     shift and go to state 7
    function_definition            shift and go to state 8
    expression                     shift and go to state 9
    compound_types                 shift and go to state 10
    compound_type_access           shift and go to state 11
    try_except                     shift and go to state 12
    print                          shift and go to state 13
    type                           shift and go to state 15
    term                           shift and go to state 21
    A                              shift and go to state 22
    factor                         shift and go to state 28

state 3

    (2) statement_list -> statement_list statement . SEMICOLON

    SEMICOLON       shift and go to state 35


state 4

    (4) statement -> declaration .

    SEMICOLON       reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    SEMICOLON       reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> if_stmnt .

    SEMICOLON       reduce using rule 6 (statement -> if_stmnt .)


state 7

    (7) statement -> while_stmt .

    SEMICOLON       reduce using rule 7 (statement -> while_stmt .)


state 8

    (8) statement -> function_definition .

    SEMICOLON       reduce using rule 8 (statement -> function_definition .)


state 9

    (9) statement -> expression .
    (75) expression -> expression . binary_operator term
    (45) binary_operator -> . MINUS
    (46) binary_operator -> . MUL
    (47) binary_operator -> . PLUS
    (48) binary_operator -> . DIV
    (49) binary_operator -> . REM

    SEMICOLON       reduce using rule 9 (statement -> expression .)
    MINUS           shift and go to state 37
    MUL             shift and go to state 38
    PLUS            shift and go to state 39
    DIV             shift and go to state 40
    REM             shift and go to state 41

    binary_operator                shift and go to state 36

state 10

    (10) statement -> compound_types .

    SEMICOLON       reduce using rule 10 (statement -> compound_types .)


state 11

    (11) statement -> compound_type_access .
    (16) assignment -> compound_type_access . ASSIGN L

    SEMICOLON       reduce using rule 11 (statement -> compound_type_access .)
    ASSIGN          shift and go to state 42


state 12

    (12) statement -> try_except .

    SEMICOLON       reduce using rule 12 (statement -> try_except .)


state 13

    (13) statement -> print .

    SEMICOLON       reduce using rule 13 (statement -> print .)


state 14

    (14) declaration -> VAR . type ID ASSIGN L
    (23) type -> . INT
    (24) type -> . BOOL
    (25) type -> . STR
    (26) type -> . VOID

    INT             shift and go to state 24
    BOOL            shift and go to state 25
    STR             shift and go to state 26
    VOID            shift and go to state 27

    type                           shift and go to state 43

state 15

    (66) function_definition -> type . ID LPAREN parameter_list RPAREN BEGIN statement_list RETURN L SEMICOLON END

    ID              shift and go to state 44


state 16

    (15) assignment -> ID . ASSIGN L
    (34) compound_type_access -> ID . DOT F
    (35) compound_type_access -> ID . LSPAREN expression RSPAREN
    (77) factor -> ID .

    ASSIGN          shift and go to state 45
    DOT             shift and go to state 46
    LSPAREN         shift and go to state 47
    PLUSPLUS        reduce using rule 77 (factor -> ID .)
    MINUSMINUS      reduce using rule 77 (factor -> ID .)
    MINUS           reduce using rule 77 (factor -> ID .)
    MUL             reduce using rule 77 (factor -> ID .)
    PLUS            reduce using rule 77 (factor -> ID .)
    DIV             reduce using rule 77 (factor -> ID .)
    REM             reduce using rule 77 (factor -> ID .)
    SEMICOLON       reduce using rule 77 (factor -> ID .)


state 17

    (54) if_stmnt -> IF . LPAREN condition RPAREN BEGIN statement_list END T K

    LPAREN          shift and go to state 48


state 18

    (82) factor -> LPAREN . expression RPAREN
    (75) expression -> . expression binary_operator term
    (76) expression -> . term
    (52) term -> . factor
    (53) term -> . term unary_operator
    (77) factor -> . ID
    (78) factor -> . NUMBER
    (79) factor -> . STRING
    (80) factor -> . TRUE
    (81) factor -> . FALSE
    (82) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 50
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    LPAREN          shift and go to state 18

    expression                     shift and go to state 49
    term                           shift and go to state 21
    factor                         shift and go to state 28

state 19

    (83) try_except -> BEGIN . TRY statement_list EXCEPT statement_list END

    TRY             shift and go to state 51


state 20

    (65) while_stmt -> WHILE . LPAREN condition RPAREN BEGIN statement_list END

    LPAREN          shift and go to state 52


state 21

    (76) expression -> term .
    (53) term -> term . unary_operator
    (50) unary_operator -> . PLUSPLUS
    (51) unary_operator -> . MINUSMINUS

    MINUS           reduce using rule 76 (expression -> term .)
    MUL             reduce using rule 76 (expression -> term .)
    PLUS            reduce using rule 76 (expression -> term .)
    DIV             reduce using rule 76 (expression -> term .)
    REM             reduce using rule 76 (expression -> term .)
    SEMICOLON       reduce using rule 76 (expression -> term .)
    RPAREN          reduce using rule 76 (expression -> term .)
    RSPAREN         reduce using rule 76 (expression -> term .)
    EQEQ            reduce using rule 76 (expression -> term .)
    NOTEQ           reduce using rule 76 (expression -> term .)
    LT              reduce using rule 76 (expression -> term .)
    GT              reduce using rule 76 (expression -> term .)
    LTEQ            reduce using rule 76 (expression -> term .)
    GTEQ            reduce using rule 76 (expression -> term .)
    COMMA           reduce using rule 76 (expression -> term .)
    PLUSPLUS        shift and go to state 54
    MINUSMINUS      shift and go to state 55

    unary_operator                 shift and go to state 53

state 22

    (27) compound_types -> A . ID ASSIGN LPAREN data RPAREN

    ID              shift and go to state 56


state 23

    (84) print -> ZOUT . LPAREN y RPAREN

    LPAREN          shift and go to state 57


state 24

    (23) type -> INT .

    ID              reduce using rule 23 (type -> INT .)
    RSPAREN         reduce using rule 23 (type -> INT .)


state 25

    (24) type -> BOOL .

    ID              reduce using rule 24 (type -> BOOL .)
    RSPAREN         reduce using rule 24 (type -> BOOL .)


state 26

    (25) type -> STR .

    ID              reduce using rule 25 (type -> STR .)
    RSPAREN         reduce using rule 25 (type -> STR .)


state 27

    (26) type -> VOID .

    ID              reduce using rule 26 (type -> VOID .)
    RSPAREN         reduce using rule 26 (type -> VOID .)


state 28

    (52) term -> factor .

    PLUSPLUS        reduce using rule 52 (term -> factor .)
    MINUSMINUS      reduce using rule 52 (term -> factor .)
    MINUS           reduce using rule 52 (term -> factor .)
    MUL             reduce using rule 52 (term -> factor .)
    PLUS            reduce using rule 52 (term -> factor .)
    DIV             reduce using rule 52 (term -> factor .)
    REM             reduce using rule 52 (term -> factor .)
    SEMICOLON       reduce using rule 52 (term -> factor .)
    RPAREN          reduce using rule 52 (term -> factor .)
    RSPAREN         reduce using rule 52 (term -> factor .)
    EQEQ            reduce using rule 52 (term -> factor .)
    NOTEQ           reduce using rule 52 (term -> factor .)
    LT              reduce using rule 52 (term -> factor .)
    GT              reduce using rule 52 (term -> factor .)
    LTEQ            reduce using rule 52 (term -> factor .)
    GTEQ            reduce using rule 52 (term -> factor .)
    COMMA           reduce using rule 52 (term -> factor .)


state 29

    (28) A -> TUPLE .

    ID              reduce using rule 28 (A -> TUPLE .)
    LSPAREN         reduce using rule 28 (A -> TUPLE .)


state 30

    (29) A -> LIST .

    ID              reduce using rule 29 (A -> LIST .)
    LSPAREN         reduce using rule 29 (A -> LIST .)


state 31

    (78) factor -> NUMBER .

    PLUSPLUS        reduce using rule 78 (factor -> NUMBER .)
    MINUSMINUS      reduce using rule 78 (factor -> NUMBER .)
    MINUS           reduce using rule 78 (factor -> NUMBER .)
    MUL             reduce using rule 78 (factor -> NUMBER .)
    PLUS            reduce using rule 78 (factor -> NUMBER .)
    DIV             reduce using rule 78 (factor -> NUMBER .)
    REM             reduce using rule 78 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 78 (factor -> NUMBER .)
    RPAREN          reduce using rule 78 (factor -> NUMBER .)
    RSPAREN         reduce using rule 78 (factor -> NUMBER .)
    EQEQ            reduce using rule 78 (factor -> NUMBER .)
    NOTEQ           reduce using rule 78 (factor -> NUMBER .)
    LT              reduce using rule 78 (factor -> NUMBER .)
    GT              reduce using rule 78 (factor -> NUMBER .)
    LTEQ            reduce using rule 78 (factor -> NUMBER .)
    GTEQ            reduce using rule 78 (factor -> NUMBER .)
    COMMA           reduce using rule 78 (factor -> NUMBER .)


state 32

    (79) factor -> STRING .

    PLUSPLUS        reduce using rule 79 (factor -> STRING .)
    MINUSMINUS      reduce using rule 79 (factor -> STRING .)
    MINUS           reduce using rule 79 (factor -> STRING .)
    MUL             reduce using rule 79 (factor -> STRING .)
    PLUS            reduce using rule 79 (factor -> STRING .)
    DIV             reduce using rule 79 (factor -> STRING .)
    REM             reduce using rule 79 (factor -> STRING .)
    SEMICOLON       reduce using rule 79 (factor -> STRING .)
    RPAREN          reduce using rule 79 (factor -> STRING .)
    RSPAREN         reduce using rule 79 (factor -> STRING .)
    EQEQ            reduce using rule 79 (factor -> STRING .)
    NOTEQ           reduce using rule 79 (factor -> STRING .)
    LT              reduce using rule 79 (factor -> STRING .)
    GT              reduce using rule 79 (factor -> STRING .)
    LTEQ            reduce using rule 79 (factor -> STRING .)
    GTEQ            reduce using rule 79 (factor -> STRING .)
    COMMA           reduce using rule 79 (factor -> STRING .)


state 33

    (80) factor -> TRUE .

    PLUSPLUS        reduce using rule 80 (factor -> TRUE .)
    MINUSMINUS      reduce using rule 80 (factor -> TRUE .)
    MINUS           reduce using rule 80 (factor -> TRUE .)
    MUL             reduce using rule 80 (factor -> TRUE .)
    PLUS            reduce using rule 80 (factor -> TRUE .)
    DIV             reduce using rule 80 (factor -> TRUE .)
    REM             reduce using rule 80 (factor -> TRUE .)
    SEMICOLON       reduce using rule 80 (factor -> TRUE .)
    RPAREN          reduce using rule 80 (factor -> TRUE .)
    RSPAREN         reduce using rule 80 (factor -> TRUE .)
    EQEQ            reduce using rule 80 (factor -> TRUE .)
    NOTEQ           reduce using rule 80 (factor -> TRUE .)
    LT              reduce using rule 80 (factor -> TRUE .)
    GT              reduce using rule 80 (factor -> TRUE .)
    LTEQ            reduce using rule 80 (factor -> TRUE .)
    GTEQ            reduce using rule 80 (factor -> TRUE .)
    COMMA           reduce using rule 80 (factor -> TRUE .)


state 34

    (81) factor -> FALSE .

    PLUSPLUS        reduce using rule 81 (factor -> FALSE .)
    MINUSMINUS      reduce using rule 81 (factor -> FALSE .)
    MINUS           reduce using rule 81 (factor -> FALSE .)
    MUL             reduce using rule 81 (factor -> FALSE .)
    PLUS            reduce using rule 81 (factor -> FALSE .)
    DIV             reduce using rule 81 (factor -> FALSE .)
    REM             reduce using rule 81 (factor -> FALSE .)
    SEMICOLON       reduce using rule 81 (factor -> FALSE .)
    RPAREN          reduce using rule 81 (factor -> FALSE .)
    RSPAREN         reduce using rule 81 (factor -> FALSE .)
    EQEQ            reduce using rule 81 (factor -> FALSE .)
    NOTEQ           reduce using rule 81 (factor -> FALSE .)
    LT              reduce using rule 81 (factor -> FALSE .)
    GT              reduce using rule 81 (factor -> FALSE .)
    LTEQ            reduce using rule 81 (factor -> FALSE .)
    GTEQ            reduce using rule 81 (factor -> FALSE .)
    COMMA           reduce using rule 81 (factor -> FALSE .)


state 35

    (2) statement_list -> statement_list statement SEMICOLON .

    VAR             reduce using rule 2 (statement_list -> statement_list statement SEMICOLON .)
    ID              reduce using rule 2 (statement_list -> statement_list statement SEMICOLON .)
    IF              reduce using rule 2 (statement_list -> statement_list statement SEMICOLON .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement SEMICOLON .)
